tests/errors/builder_rettype.vt
class B { fn init(){} builder fn m(): int { return this; } } fn main(){}
